--- a/fabric_18/build.gradle
+++ b/fabric_18/build.gradle
@@ -11,7 +11,7 @@ repositories {
 dependencies {
 
     minecraft "com.mojang:minecraft:1.18.2"
-    mappings loom.officialMojangMappings()
+    mappings "net.fabricmc:yarn:1.18.2+build.3:v2"
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     //modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
